# slambook2

ch11/: loop_closure.cpp
ch12/dense_RGBD/: CMakeLists.txt  pointcloud_mapping.cpp
ch13/: CMakeLists.txt
ch13/app/: run_kitti_stereo.cpp
ch13/config/: default.yaml
ch13/include/myslam/: frontend.h
ch13/src/: CMakeLists.txt  camera.cpp  frontend.cpp  viewer.cpp
ch3/visualizeGeometry/: CMakeLists.txt
ch4/example/: CMakeLists.txt  trajectoryError.cpp
ch5/: CMakeLists.txt
ch5/imageBasics/: imageBasics.cpp  undistortImage.cpp
ch5/rgbd/: CMakeLists.txt  joinMap.cpp
ch5/stereo/: CMakeLists.txt  stereoVision.cpp
ch6/: CMakeLists.txt
ch7/: CMakeLists.txt  orb_cv.cpp  pose_estimation_3d2d.cpp
ch8/: CMakeLists.txt  direct_method.cpp  optical_flow.cpp
